test/files/neg/case-collision.check
case-collision.scala:5: warning: Generated class foo.BIPPY differs only in case from foo.Bippy.
  Such classes will overwrite one another on case-insensitive filesystems.
class BIPPY
      ^
case-collision.scala:8: warning: Generated class foo.DINGO$ differs only in case from foo.Dingo$.
  Such classes will overwrite one another on case-insensitive filesystems.
object DINGO
       ^
case-collision.scala:8: warning: Generated class foo.DINGO differs only in case from foo.Dingo.
  Such classes will overwrite one another on case-insensitive filesystems.
object DINGO
       ^
case-collision.scala:11: warning: Generated class foo.HyRaX$ differs only in case from foo.Hyrax$.
  Such classes will overwrite one another on case-insensitive filesystems.
object HyRaX
       ^
case-collision.scala:11: warning: Generated class foo.HyRaX differs only in case from foo.Hyrax.
  Such classes will overwrite one another on case-insensitive filesystems.
object HyRaX
       ^
case-collision.scala:14: warning: Generated class foo.wackO differs only in case from foo.Wacko.
  Such classes will overwrite one another on case-insensitive filesystems.
object wackO
       ^
error: No warnings can be incurred under -Xfatal-warnings.
6 warnings found
one error found
